--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>STONKS!</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QRT85BFY02"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-QRT85BFY02');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
